removed extra spacing problem(bug)

--- a/src/components/Pages/Training.css
+++ b/src/components/Pages/Training.css
@@ -4,9 +4,10 @@
     padding: 0;
 } 
 
-body {
+/* body {
     font-family: Oxygen, sans-serif;
-}
+    margin:-2rem;
+} */
 
 .sldi98{
     margin-top: 60px;
